--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.23",
     "@types/three": "^0.143.0",
+    "dat.gui": "^0.7.9",
     "three": "^0.143.0",
     "ts-loader": "^9.2.8",
     "typescript": "^4.6.2",
