--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "csv": "^6.2.0",
     "express": "^4.17.3"
   }
